[package]
name = "clock_get_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.28.0", features = ["time"] }


[dev-dependencies]
criterion = { version = "0.5.1" ,features = ["html_reports"]}
nix = { version = "0.28.0", features = ["time"] }

[[bench]]
name = "benchmark"
harness = false
